--- a/index.html
+++ b/index.html
@@ -4,74 +4,94 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <!-- Google Fonts links -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Modern Normalize link -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    />
+    <!-- Own styles link -->
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li>
-            <a href="">Studio</a>
+    <header class="page-header">
+      <nav class="page-nav">
+        <a class="logo" href="./index.html"
+          >Web<span class="logo-part">Studio</span>
+        </a>
+        <ul class="menu">
+          <li class="menu-item">
+            <a class="menu-link" href="">Studio</a>
           </li>
-          <li>
-            <a href="">Portfolio</a>
+          <li class="menu-item">
+            <a class="menu-link" href="">Portfolio</a>
           </li>
-          <li>
-            <a href="">Contacts</a>
+          <li class="menu-item">
+            <a class="menu-link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <address class="page-address">
+        <ul class="contact">
+          <li class="contact-item">
+            <a class="contact-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
-          <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li class="contact-item">
+            <a class="contact-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="section-title">
+        <h1 class="title">Effective Solutions for Your Business</h1>
+        <button class="order-btn" type="button">Order Service</button>
       </section>
-      <section>
+      <section class="section-benefits">
         <h2>Our benefits</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="section-benefits-title">Strategy</h3>
+            <p class="section-benefits-descr">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="section-benefits-title">Punctuality</h3>
+            <p class="section-benefits-descr">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="section-benefits-title">Diligence</h3>
+            <p class="section-benefits-descr">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="section-benefits-title">Technologies</h3>
+            <p class="section-benefits-descr">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
+      <section class="section-team">
+        <h2 class="section-team-title">Our Team</h2>
         <ul>
           <li>
             <img
@@ -80,8 +100,8 @@
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="section-team-name">Mark Guerrero</h3>
+            <p class="section-team-profession">Product Designer</p>
           </li>
           <li>
             <img
@@ -90,8 +110,8 @@
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="section-team-name">Tom Ford</h3>
+            <p class="section-team-profession">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -100,8 +120,8 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="section-team-name">Camila Garcia</h3>
+            <p class="section-team-profession">Marketing</p>
           </li>
           <li>
             <img
@@ -110,13 +130,13 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="section-team-name">Daniel Wilson</h3>
+            <p class="section-team-profession">UI Designer</p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Portfolio</h2>
+      <section class="section-portfolio">
+        <h2 class="section-portfolio-title">Our Portfolio</h2>
         <ul>
           <li>
             <img
@@ -125,8 +145,8 @@
               width="360"
               height="300"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="section-portfolio-service">Banking App</h3>
+            <p class="section-portfolio-descr">App</p>
           </li>
           <li>
             <img
@@ -135,8 +155,8 @@
               width="360"
               height="300"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="section-portfolio-service">Cashless Payment</h3>
+            <p class="section-portfolio-descr">Marketing</p>
           </li>
           <li>
             <img
@@ -145,8 +165,8 @@
               width="360"
               height="300"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="section-portfolio-service">Meditation App</h3>
+            <p class="section-portfolio-descr">App</p>
           </li>
           <li>
             <img
@@ -155,8 +175,8 @@
               width="360"
               height="300"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="section-portfolio-service">Taxi Service</h3>
+            <p class="section-portfolio-descr">Marketing</p>
           </li>
           <li>
             <img
@@ -165,8 +185,8 @@
               width="360"
               height="300"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="section-portfolio-service">Screen Illustrations</h3>
+            <p class="section-portfolio-descr">Design</p>
           </li>
           <li>
             <img
@@ -175,15 +195,17 @@
               width="360"
               height="300"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="section-portfolio-service">Online Courses</h3>
+            <p class="section-portfolio-descr">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="page-footer">
+      <a class="logo" href="./index.html"
+        >Web<span class="logo-part">Studio</span>
+      </a>
+      <p class="page-footer-descr">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
