--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </a>
         <ul class="menu">
           <li class="menu-item">
-            <a class="menu-link" href="">Studio</a>
+            <a class="menu-link" href="./index.html">Studio</a>
           </li>
           <li class="menu-item">
             <a class="menu-link" href="">Portfolio</a>
@@ -93,7 +93,7 @@
       <section class="section-team">
         <h2 class="section-team-title">Our Team</h2>
         <ul>
-          <li>
+          <li class="section-team-card">
             <img
               src="./images/team/mark-guerrero.jpg"
               alt="Mark Guerrero avatar"
@@ -103,7 +103,7 @@
             <h3 class="section-team-name">Mark Guerrero</h3>
             <p class="section-team-profession">Product Designer</p>
           </li>
-          <li>
+          <li class="section-team-card">
             <img
               src="./images/team/tom-ford.jpg"
               alt="Tom Ford avatar"
@@ -113,7 +113,7 @@
             <h3 class="section-team-name">Tom Ford</h3>
             <p class="section-team-profession">Frontend Developer</p>
           </li>
-          <li>
+          <li class="section-team-card">
             <img
               src="./images/team/camila-garcia.jpg"
               alt="Camila Garcia avatar"
@@ -123,7 +123,7 @@
             <h3 class="section-team-name">Camila Garcia</h3>
             <p class="section-team-profession">Marketing</p>
           </li>
-          <li>
+          <li class="section-team-card">
             <img
               src="./images/team/daniel-wilson.jpg"
               alt="Daniel Wilson avatar"
@@ -203,7 +203,7 @@
     </main>
     <footer class="page-footer">
       <a class="logo" href="./index.html"
-        >Web<span class="logo-part">Studio</span>
+        >Web<span class="logo-part-footer">Studio</span>
       </a>
       <p class="page-footer-descr">
         Increase the flow of customers and sales for your business with digital
